<resources>
    <string name="app_name">Timetable Assistant</string>

    <string name="splash_greeting">Прототип, только для Вас</string>

    <string name="main_add_timetable_title">Новое расписание \"%1$s\"</string>
    <string name="weekday_1">пн</string>
    <string name="weekday_2">вт</string>
    <string name="weekday_3">ср</string>
    <string name="weekday_4">чт</string>
    <string name="weekday_5">пт</string>
    <string name="weekday_6">сб</string>
    <string name="weekday_7">вс</string>

    <string name="main_new_timetable_item">Новый пункт расписания</string>
    <string name="main_lecture_name">Название дисциплины</string>
    <string name="main_lecturer">Имя преподавателя/группы</string>
    <string name="main_auditory">Аудитория</string>

    <string name="main_timetable_name_title">Введите название расписания</string>

    <string name="button_ok">ОК</string>
    <string name="button_cancel">Отмена</string>

    <string name="main_list_empty">Вы еще не добавили ни одного раписания.\nНажмите на \"+\", чтобы добавить новое.</string>
</resources>